Add Release configuration

--- a/Crucible.vcxproj
+++ b/Crucible.vcxproj
@@ -42,6 +42,10 @@
     <IncludePath>$(OBSLib);$(Boost);$(IncludePath)</IncludePath>
     <LibraryPath>$(OBSBuild)\Debug;$(Boost)\stage\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <LibraryPath>$(OBSBuild)\Debug;$(Boost)\stage\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(OBSLib);$(Boost);$(IncludePath)</IncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
