Reduce setup time for debugging
This should reduce setup cost to 0, assuming libobs had its dependencies
copied (via e.g. CMake) and the env vars are set up properly.

--- a/Crucible.vcxproj
+++ b/Crucible.vcxproj
@@ -41,10 +41,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <IncludePath>$(OBSLib);$(Boost);$(IncludePath)</IncludePath>
     <LibraryPath>$(OBSBuild)\Debug;$(Boost)\stage\lib;$(LibraryPath)</LibraryPath>
+    <LocalDebuggerEnvironment>PATH=$(PATH);$(OBSBuild)\..\rundir\$(Configuration)\bin\32bit\</LocalDebuggerEnvironment>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LibraryPath>$(OBSBuild)\Debug;$(Boost)\stage\lib;$(LibraryPath)</LibraryPath>
     <IncludePath>$(OBSLib);$(Boost);$(IncludePath)</IncludePath>
+    <LocalDebuggerEnvironment>PATH=$(PATH);$(OBSBuild)\..\rundir\$(Configuration)\bin\32bit\</LocalDebuggerEnvironment>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
