Add remote command IPC server

--- a/Crucible.vcxproj.filters
+++ b/Crucible.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="TestWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IPC.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
