--- a/Crucible.vcxproj
+++ b/Crucible.vcxproj
@@ -40,12 +40,12 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <IncludePath>$(OBSLib);$(Boost);$(IncludePath)</IncludePath>
-    <LibraryPath>$(OBSBuild)\Debug;$(Boost)\stage\lib;$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(OBSBuild)\$(Configuration);$(Boost)\stage\lib;$(OBSBuild)\..\deps\ipc-util\$(Configuration);$(LibraryPath)</LibraryPath>
     <LocalDebuggerEnvironment>PATH=$(PATH);$(OBSBuild)\..\rundir\$(Configuration)\bin\32bit\</LocalDebuggerEnvironment>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>$(OBSLib);$(Boost);$(IncludePath)</IncludePath>
-    <LibraryPath>$(OBSBuild)\Release;$(Boost)\stage\lib;$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(OBSBuild)\$(Configuration);$(Boost)\stage\lib;$(OBSBuild)\..\deps\ipc-util\$(Configuration);$(LibraryPath)</LibraryPath>
     <LocalDebuggerEnvironment>PATH=$(PATH);$(OBSBuild)\..\rundir\$(Configuration)\bin\32bit\</LocalDebuggerEnvironment>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -56,7 +56,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>obs.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>obs.lib;ipc-util.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -71,7 +71,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>obs.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>obs.lib;ipc-util.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -79,6 +79,7 @@
     <ClCompile Include="TestWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="IPC.hpp" />
     <ClInclude Include="TestWindow.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
