Move OBSData* helpers to OBSHelpers.hpp

--- a/Crucible.vcxproj
+++ b/Crucible.vcxproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IPC.hpp" />
+    <ClInclude Include="OBSHelpers.hpp" />
     <ClInclude Include="TestWindow.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
