Add more flexible audio encoder selection
For systems that don't have iTunes/Apple encoders installed

--- a/Crucible.vcxproj
+++ b/Crucible.vcxproj
@@ -77,6 +77,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AudioEncoderSelection.cpp" />
     <ClCompile Include="Crucible.cpp" />
     <ClCompile Include="TestWindow.cpp" />
   </ItemGroup>
