--- a/Crucible.vcxproj.filters
+++ b/Crucible.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="TestWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AudioEncoderSelection.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TestWindow.h">
