--- a/AnvilRendering/AnvilRendering.vcxproj
+++ b/AnvilRendering/AnvilRendering.vcxproj
@@ -76,6 +76,10 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>$(OBSLib);$(OBSLib)\..\deps\ipc-util;$(ForgeLib)\open-steamworks\Open Steamworks;$(Boost);$(ForgeLib)\libcef-3.2526.1352.g61f7df0;$(OpenSSL)\include;$(ForgeLib)\zlib-1.2.8;$(ForgeLib)\curl-7.45.0\include;$(ForgeLib)\cajun-2.0.2;$(IncludePath)</IncludePath>
+    <LibraryPath>$(OBSBuild64)\..\deps\ipc-util\$(Configuration);$(Boost)\stage\lib;$(OpenSSL)\lib;$(ForgeLib)\zlib-1.2.8;$(ForgeLib)\curl-7.45.0\lib;$(ForgeLib)\libcef-3.2526.1352.g61f7df0\$(Configuration);$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)\$(Configuration)\</OutDir>
+    <TargetName>$(ProjectName)64</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -84,6 +88,10 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(OBSLib);$(OBSLib)\..\deps\ipc-util;$(ForgeLib)\open-steamworks\Open Steamworks;$(Boost);$(ForgeLib)\libcef-3.2526.1352.g61f7df0;$(OpenSSL)\include;$(ForgeLib)\zlib-1.2.8;$(ForgeLib)\curl-7.45.0\include;$(ForgeLib)\cajun-2.0.2;$(IncludePath)</IncludePath>
+    <LibraryPath>$(OBSBuild64)\..\deps\ipc-util\$(Configuration);$(Boost)\stage\lib;$(OpenSSL)\lib;$(ForgeLib)\zlib-1.2.8;$(ForgeLib)\curl-7.45.0\lib;$(ForgeLib)\libcef-3.2526.1352.g61f7df0\$(Configuration);$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)\$(Configuration)\</OutDir>
+    <TargetName>$(ProjectName)64</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -110,6 +118,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>ipc-util.lib;shlwapi.lib;gdiplus.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -145,6 +154,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>ipc-util.lib;shlwapi.lib;gdiplus.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
