--- a/AnvilRendering/AnvilRendering.vcxproj
+++ b/AnvilRendering/AnvilRendering.vcxproj
@@ -180,6 +180,7 @@
     <ClInclude Include="TaksiInput\KeyboardInput.h" />
     <ClInclude Include="TaksiInput\TaksiInput.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="GAPI_render\TextureBufferingHelper.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AnvilRendering.cpp" />
