--- a/AnvilRendering/AnvilRendering.vcxproj
+++ b/AnvilRendering/AnvilRendering.vcxproj
@@ -227,9 +227,12 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="GAPI_render\res\indicator_bookmark.png" />
+    <Image Include="GAPI_render\res\indicator_cache_limit.png" />
     <Image Include="GAPI_render\res\indicator_capturing.png" />
     <Image Include="GAPI_render\res\indicator_enabled.png" />
     <Image Include="GAPI_render\res\indicator_enabled_hotkeys.png" />
+    <Image Include="GAPI_render\res\indicator_recorded.png" />
+    <Image Include="GAPI_render\res\indicator_uploaded.png" />
     <Image Include="GAPI_render\res\mic_active_w_indicator.png" />
     <Image Include="GAPI_render\res\mic_idle_w_indicator.png" />
     <Image Include="GAPI_render\res\mic_mute_w_indicator.png" />
