--- a/AnvilRendering/AnvilRendering.vcxproj
+++ b/AnvilRendering/AnvilRendering.vcxproj
@@ -236,6 +236,7 @@
     <Image Include="GAPI_render\res\mic_active_w_indicator.png" />
     <Image Include="GAPI_render\res\mic_idle_w_indicator.png" />
     <Image Include="GAPI_render\res\mic_mute_w_indicator.png" />
+    <Image Include="res\indicator_cache_limit.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
