--- a/AnvilRendering/AnvilRendering.vcxproj.filters
+++ b/AnvilRendering/AnvilRendering.vcxproj.filters
@@ -175,6 +175,12 @@
     <Image Include="res\indicator_cache_limit.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\indicator_recorded.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\indicator_uploaded.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GAPI_render\Anvil.rc">
