Copy ProtectedObject from forge
These should really move to a shared lib thing soon

--- a/Crucible/Crucible.vcxproj
+++ b/Crucible/Crucible.vcxproj
@@ -85,6 +85,7 @@
   <ItemGroup>
     <ClInclude Include="IPC.hpp" />
     <ClInclude Include="OBSHelpers.hpp" />
+    <ClInclude Include="ProtectedObject.hpp" />
     <ClInclude Include="TestWindow.h" />
     <ClInclude Include="ThreadTools.hpp" />
   </ItemGroup>
