--- a/AnvilRendering/AnvilRendering.vcxproj
+++ b/AnvilRendering/AnvilRendering.vcxproj
@@ -237,6 +237,28 @@
     <Image Include="GAPI_render\res\mic_idle_w_indicator.png" />
     <Image Include="GAPI_render\res\mic_mute_w_indicator.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="cursors\aliasb.cur" />
+    <None Include="cursors\cell.cur" />
+    <None Include="cursors\col_resize.cur" />
+    <None Include="cursors\copy.cur" />
+    <None Include="cursors\hand_grab.cur" />
+    <None Include="cursors\hand_grabbing.cur" />
+    <None Include="cursors\none.cur" />
+    <None Include="cursors\pan_east.cur" />
+    <None Include="cursors\pan_middle.cur" />
+    <None Include="cursors\pan_north.cur" />
+    <None Include="cursors\pan_north_east.cur" />
+    <None Include="cursors\pan_north_west.cur" />
+    <None Include="cursors\pan_south.cur" />
+    <None Include="cursors\pan_south_east.cur" />
+    <None Include="cursors\pan_south_west.cur" />
+    <None Include="cursors\pan_west.cur" />
+    <None Include="cursors\row_resize.cur" />
+    <None Include="cursors\vertical_text.cur" />
+    <None Include="cursors\zoom_in.cur" />
+    <None Include="cursors\zoom_out.cur" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
